  to prevent bad ratings.
- Bugfix: Check if the developer handle is actually a string.
- Bugfix: Added a missing check in the url determination in the
  timer controller
- Bugfix: The registering of blacklisted methods and classes for
  the debug methods work now, as they should.
- Bugfix: The rewriting of singleton classes in the pool does not
  work.

3.0.2
- Added classname to the declaration analysis of properties.
- Added analysis of cUrl resources.
- Added a check for the content type to the ajax detection.
- Improved the jump to element of the Hans skin.
- Change: Protected properties are now wrapped again.
- Bugfix: Replace the $hellip; in the file service, it may cause
  double escaping issues in the backend of some systems.
- Bugfix: The method analysis doesn't take traits into account.
- Bugfix: The property analysis doesn't take traits into account.
- Bugfix: Remove the copy-pasta spaces from the skins.
- Bugfix: Cut off parameter analysis
- Bugfix: Property analysis does not handle predefined classes
  correctly.
- Bugfix: "Autoloading" may fail with a weird directory path
- Bugfix: The fatal error handler backtrace is broken
- Bugfix: Fix the styles of the Hans skin

3.0.1
- Change: All singelton classes now add themself to the pool as
  soon as they are created.
- Bugfix: Added the missing end event to the property analysis.
- Bugfix / Change: Configured debug methods are now checked on
  configuration loading.
- Bugfix: Preserve the line breaks from the string-extra.
- Bugfix: Repair the UndeclaredProperty class and use it.
- Bugfix: Lower the nesting level again after a failed traversable
  analysis.
- Bugfix: Analysis of private getter do not respect the context.
- Bugfix: Interesting display of parameters in the method analysis.
- Bugfix: Infinite loop when configuring the ip range.

3.0.0
- Added 'is' and 'has' to the getter analysis.
- Added plugin support, to replace the half-asses overwrites.
- Added a event dispatcher.